Revision history for Geometry-Primitive

0.07
  - Add grow method to Shape role and implementations
  - Fix line slope calculation
  - Line: add is_perpendicular and is_parallel
  - Arc: don't check angles in get_point_at_angle, allow for negative arcs
  - Util: Remove in favor of Math::Trig

0.06
  - Shape: removed get_points in favor of point_start/point_end
  - Arc: Add length and get_point_at_angle
  - Line: rename point_start/point_end to start/end
  - Line: added contains_point, length and y_intercept
  - Polygon: rename get_point_at to get_point
  - Point: add string overload
  - Circle: Add area and circumference
  - Make some attributes required
  - More MX::Clone lovin'
  - Add to_string and "" overload to Line

0.05
  - Add MooseX::Clone for Point (for now)
  - Add make_immutable to er'thang

0.04
  - Add Circle
  - Move 'origin' attribute from Rectangle to Shape and make it !required

0.03
  - Add MI version because Yuval yelled at me
  - Add degrees_to_radians and radians_to_degrees to Util
  
0.02    2008-07-09
  - Package fixes, no changes

0.01    Date/time
        First version, released on an unsuspecting world.
