@@ -8,7 +8,7 @@ build_requires 'Test::More';
 
 test_requires 'Pod::Coverage::Moose';
 
-requires 'Math::Trig' => '1.54';
+requires 'Math::Complex' => '1.54';
 requires 'Moose' => '0.54';
 requires 'MooseX::AttributeHelpers' => '0.12';
 requires 'MooseX::Clone' => '0.03';
