@@ -1,4 +1,4 @@
-use Test::More tests => 7;
+use Test::More tests => 9;
 
 BEGIN {
     use_ok('Geometry::Primitive::Point');
@@ -14,8 +14,10 @@ my $point3 = Geometry::Primitive::Point->new(x => 1, y => 1);
 $poly->add_point($point3);
 my $point4 = Geometry::Primitive::Point->new(x => 1, y => 0);
 $poly->add_point($point4);
+my $point5 = Geometry::Primitive::Point->new(x => 0, y => 0);
+$poly->add_point($point5);
 
-cmp_ok($poly->point_count, '==', 4, 'point count');
+cmp_ok($poly->point_count, '==', 5, 'point count');
 ok($poly->get_point(0)->equal_to($point1), 'get point 1');
 ok($poly->point_start->equal_to($point1), 'start point');
 ok($poly->point_end->equal_to($point1), 'end point');
