@@ -1,11 +1,12 @@
 Revision history for Geometry-Primitive
 
 0.07
-  - Add grow method to Shape role and implementations
+  - Add scale method to Shape role and implementations
   - Fix line slope calculation
   - Line: add is_perpendicular and is_parallel
   - Arc: don't check angles in get_point_at_angle, allow for negative arcs
   - Util: Remove in favor of Math::Trig
+  - Polygon: Implement area
 
 0.06
   - Shape: removed get_points in favor of point_start/point_end
